prod/monitoring/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-prod
  namespace: monitoring
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`grafana.${PROD_DOMAIN}`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
  tls:
    secretName: ${TLS_SECRET_NAME}
